[package]
name = "everlend-e2e-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
bs58 = "0.2.5"
solana-cli-config = "1.9.2"
solana-account-decoder = "1.9.2"
solana-client = "1.9.2"
solana-sdk = "1.9.2"
solana-logger = "1.9.2"
solana-program = "1.9.2"
tokio = "1.9.0"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
everlend-registry = { path = "../registry/program", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../general_pool/program", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../ulp/program", features = [ "no-entrypoint" ] }
everlend-income-pools = { path = "../income_pools/program", features = [ "no-entrypoint" ] }
everlend-depositor = { path = "../depositor/program", features = [ "no-entrypoint" ] }
everlend-liquidity-oracle = { path = "../liquidity_oracle/program", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
port-variable-rate-lending-instructions = "0.2.9"
