[package]
name = "everlend-general-pool"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
solana-program = "1.9.13"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
everlend-registry = { path = "../registry", features = [ "no-entrypoint" ] }
eld-rewards = { git = "https://github.com/everlend/everlend-next.git", branch = "feature/everlend-integration",  features = [ "no-entrypoint" ] }
eld-config = { git = "https://github.com/everlend/everlend-next.git", branch = "feature/everlend-integration",  features = [ "no-entrypoint" ] }
borsh = "0.9.0"

[dev-dependencies]
solana-sdk = "1.9.13"
solana-program-test = "1.9.13"

[lib]
crate-type = ["cdylib", "lib"]
