[package]
name = "everlend-tests"
version = "0.1.0"
edition = "2018"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.8.14"
solana-program = "1.8.14"
solana-program-test = "1.8.14"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", branch = "stable-token-lending", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../ulp", features = [ "no-entrypoint" ] }
everlend-income-pools = { path = "../income_pools", features = [ "no-entrypoint" ] }
everlend-depositor = { path = "../depositor", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../general_pool/program", features = [ "no-entrypoint" ] }
everlend-liquidity-oracle = { path = "../liquidity_oracle", features = [ "no-entrypoint" ] }
everlend-registry = { path = "../registry", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
