[package]
name = "everlend-tests"
version = "0.1.0"
edition = "2018"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.9.13"
solana-program = "1.9.13"
solana-program-test = "1.9.13"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../ulp", features = [ "no-entrypoint" ] }
everlend-collateral-pool = { path = "../collateral_pool", features = [ "no-entrypoint" ] }
everlend-income-pools = { path = "../income_pools", features = [ "no-entrypoint" ] }
everlend-depositor = { path = "../depositor", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../general_pool", features = [ "no-entrypoint" ] }
everlend-liquidity-oracle = { path = "../liquidity_oracle", features = [ "no-entrypoint" ] }
everlend-registry = { path = "../registry", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
eld-rewards = { git = "ssh://git@github.com/everlend/everlend-next.git", branch = "feature/everlend-integration",  features = [ "no-entrypoint" ] }
eld-config = { git = "ssh://git@github.com/everlend/everlend-next.git", branch = "feature/everlend-integration",  features = [ "no-entrypoint" ] }