[package]
name = "everlend-toolkit"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
anchor-lang = "0.24.2"
bs58 = "0.2.5"
clap = "2.33.3"
url = "2.2.2"
regex = "1.5.5"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_yaml = "0.8.21"
serde_with = "1.12.0"
solana-clap-utils = "1.9.13"
solana-cli-config = "1.9.13"
solana-account-decoder = "1.9.13"
solana-client = "1.9.13"
solana-sdk = "1.9.13"
solana-logger = "1.9.13"
solana-program = "1.9.13"
tokio = "1.9.0"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
everlend-registry = { path = "../registry", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../general_pool", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../ulp", features = [ "no-entrypoint" ] }
everlend-income-pools = { path = "../income_pools", features = [ "no-entrypoint" ] }
everlend-depositor = { path = "../depositor", features = [ "no-entrypoint" ] }
everlend-liquidity-oracle = { path = "../liquidity_oracle", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../utils" }
port-variable-rate-lending-instructions = "0.2.9"
serum-multisig = { git = "https://github.com/everlend/multisig", features = [ "no-entrypoint" ] }
