[package]
name = "everlend-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.7"
thiserror = "1.0"
solana-program = "1.9.13"
anchor-lang = "0.24.2"
arrayref = "0.3.6"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { git = "https://github.com/everlend/solana-program-library", features = [ "no-entrypoint" ] }
port-variable-rate-lending-instructions = "0.2.9"
larix-lending = { git = "https://github.com/everlend/larix-lending", features = [ "no-entrypoint" ] }
port-finance-staking = { git = "https://github.com/port-finance/variable-rate-lending", features = ["no-entrypoint"] }
tulipv2-sdk-lending = { git = "https://github.com/sol-farm/tulipv2-sdk" }
quarry-mine = { version = "5.0.2", features = ["no-entrypoint"] }
quarry-redeemer = { version = "5.0.2", features = ["no-entrypoint"] }
borsh = "0.9.0"
solend-program = { git = "https://github.com/everlend/solend-program", features = [ "no-entrypoint" ], branch = "mainnet" }
mpl-token-metadata = { version = "1.3.3", features = [ "no-entrypoint" ] }
jet-proto-math = "1.0.6"

[dev-dependencies]
solana-sdk = "1.9.13"

[lib]
crate-type = ["cdylib", "lib"]
