[package]
name = "everlend-depositor"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
solana-program = "1.7.10"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-token-lending = { path = "../../../../solana-program-library/token-lending/program", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../../ulp/program", features = [ "no-entrypoint" ] }
borsh = "0.9.0"

[dev-dependencies]
solana-sdk = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]
