[package]
name = "everlend-income-pools"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
solana-program = "1.9.2"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../../general_pool/program", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../../utils" }
borsh = "0.9.0"

[dev-dependencies]
solana-sdk = "1.9.2"
solana-program-test = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
