[package]
name = "everlend-liquidity-oracle"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.10"
borsh = "0.9.1"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-sdk = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]