[package]
name = "everlend-registry-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
bs58 = "0.2.5"
clap = "2.33.3"
solana-clap-utils = "1.9.2"
solana-cli-config = "1.9.2"
solana-account-decoder = "1.9.2"
solana-client = "1.9.2"
solana-logger = "1.9.2"
solana-sdk = "1.9.2"
solana-program = "1.9.2"
everlend-registry = { path = "../../registry/program", features = [ "no-entrypoint" ] }
everlend-ulp = { path = "../../ulp/program", features = [ "no-entrypoint" ] }
everlend-income-pools = { path = "../../income_pools/program", features = [ "no-entrypoint" ] }
everlend-depositor = { path = "../../depositor/program", features = [ "no-entrypoint" ] }
everlend-general-pool = { path = "../../general_pool/program", features = [ "no-entrypoint" ] }
everlend-liquidity-oracle = { path = "../../liquidity_oracle/program", features = [ "no-entrypoint" ] }
everlend-utils = { path = "../../utils" }
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
